[tool.poetry]
name = "asyncio"
version = "0.1.0"
description = ""
authors = ["Valeriya <Dzhavadova.v@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
httpx = "^0.27.2"
pandas = "^2.2.2"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
